# Flatrace

./: .gitignore  CMakeLists.txt  README.md  main.cpp
core/: bvh.cpp  bvh.h  frame.h  intersect.h  math.h  types.h
ply/: profiles.xml
site_cmake/: FindTBB.cmake
src/core/: application.cpp  application.h  bvh.cpp  bvh.h  frame.h  intersect.h  obbTree.cpp  obbTree.h  trace.cpp  trace.h  types.h
src/core/bvh/: aabbTree.cpp  aabbTree.h  bvh.cpp  bvh.h  obbTree.cpp  obbTree.h
src/core/dito/: dito.cpp  dito.h
src/debug/: bvhCounter.h  bvh_debugger.h  debugTypes.h  visualization.cpp  visualization.h
src/simde/simde/arm/: neon.h  sve.h
src/simde/simde/arm/neon/: rshl.h  shl.h  types.h
src/simde/simde/arm/sve/: types.h
src/simde/simde/mips/: msa.h
src/simde/simde/mips/msa/: types.h
src/simde/simde/wasm/: simd128.h
src/simde/simde/x86/: avx.h  avx512.h  clmul.h  f16c.h  gfni.h  mmx.h  sse.h  sse2.h  svml.h
src/simde/simde/x86/avx512/: abs.h  add.h  adds.h  and.h  andnot.h  avg.h  broadcast.h  cmpeq.h  cmpgt.h  cmpneq.h  cvt.h  dbsad.h  fmadd.h  fmsub.h  fnmadd.h  fnmsub.h  gather.h  madd.h  maddubs.h  max.h  min.h  mov_mask.h  movm.h  or.h  packs.h  packus.h  rol.h  rolv.h  ror.h  rorv.h  sad.h  scalef.h  shldv.h  shuffle.h  sll.h  slli.h  sra.h  srl.h  srli.h  srlv.h  (+6 more)
src/simde/test/: CMakeLists.txt  run-tests.h  test.h
src/simde/test/arm/: run-tests.h
src/simde/test/arm/neon/: aba.c  test-neon.h
src/simde/test/arm/sve/: and.c  cmplt.c  dup.c  meson.build  qadd.c  run-tests-neon.h  run-tests.c  run-tests.h  sel.c  test-sve-footer.h  test-sve.h
src/simde/test/mips/: run-tests.h
src/simde/test/mips/msa/: test-msa.h
src/simde/test/wasm/: run-tests.h  test-simd128.h
src/simde/test/wasm/relaxed-simd/: test-relaxed-simd.h
src/simde/test/wasm/simd128/: test-simd128.h
src/simde/test/x86/: run-tests.h  test-avx.h  test-mmx.h  test-sse.h  test-sse2.h  test-x86.h
src/simde/test/x86/avx512/: test-avx512.h
src/utils/: globalState.cpp  globalState.h  imguiManager.cpp  imguiManager.h  obj.cpp  obj.h  ply.cpp  ply.h  ppm.cpp  ppm.h  settings.h  window.cpp  window.h
test/: main.cpp  test_bvh.cpp  test_flatrace.cpp
test/output/writeTest/: obb.ppm
utils/: obj.cpp  obj.h  ppm.cpp  ppm.h
